<resources>
    <string name="app_name">Poke Tracker</string>
    <string name="title">Poke - Tracker</string>
    <string name="subtitle">Register new catch</string>
    <string name="label_national_number">National Number</string>
    <string name="label_name">Name</string>
    <string name="label_species">Species</string>
    <string name="label_gender">Gender</string>
    <string name="label_height">Height</string>
    <string name="label_weight">Weight</string>
    <string name="label_level">Level</string>
    <string name="title_stats">Base Stats</string>
    <string name="label_hp">HP</string>
    <string name="label_attack">Attack</string>
    <string name="label_defense">Defense</string>
    <string name="button_reset">Reset</string>
    <string name="button_save">Save</string>
</resources>